Fix WordList alignment
This commit adds the needed flexbox flgs to correctly
align the Words in the WordList; as a consequence
the WordList now scrolls properly. This closes #2.

Moreover, with this commit, we have a GUI-version of the
generate solution function; see #8.

--- a/src/App.css
+++ b/src/App.css
@@ -204,7 +204,8 @@ input[type="submit"] {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-content: space-around;
+  justify-content: flex-start;
+  align-items: flex-start;
   background-color: blue;
   overflow-y: auto;
 }
